feat(style): adjust space between detail list

--- a/src/pages/PharmacyListPage.scss
+++ b/src/pages/PharmacyListPage.scss
@@ -3,7 +3,7 @@
 .ant-layout-content {
     min-height: 120px;
     color: $color-natural1;
-    line-height: 120px;
+    //line-height: 120px;
     background: $color-natural2;
   }
 
