--- a/src/components/pharmacyList/pharmacy/PharmacyDetail.scss
+++ b/src/components/pharmacyList/pharmacy/PharmacyDetail.scss
@@ -6,12 +6,14 @@
     border-color: $color-classy2;
     border-radius: 12px;
     margin: 4px;
-    height: 120px;
 }
 
 .pharmacy-{
     &name{
         font-weight: bold;
         display: inline;
+    }
+    &address{
+        opacity: 80%;
     }
 }
