--- a/src/pages/PharmacyListPage.scss
+++ b/src/pages/PharmacyListPage.scss
@@ -1,24 +1,28 @@
-@import '../styles/_colors';
+@import "../styles/_colors";
 
 .ant-layout-content {
-    min-height: 120px;
-    color: $color-natural1;
-    //line-height: 120px;
-    background: $color-natural2;
-  }
+  color: $color-natural1;
+  background: $color-natural2;
+}
 
-  .ant-layout-header,
-  .ant-layout-footer {
+.ant-layout- {
+  &header {
+    margin-bottom: 4px;
+    padding: 16px;
     color: $color-natural2;
     background: $color-natural1;
   }
 
-  .ant-layout-footer{
-      display: flex;
-      justify-content: center;
+  &footer {
+    padding: 16px;
+    color: $color-natural2;
+    background: $color-natural1;
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
   }
+}
 
-  .ant-layout{
-      justify-content: space-between;
-      
-  }
+.ant-layout {
+  justify-content: space-between;
+}
