--- a/src/components/pharmacyList/pharmacy/PharmacyDetail.scss
+++ b/src/components/pharmacyList/pharmacy/PharmacyDetail.scss
@@ -2,9 +2,7 @@
 
 .pharmacy-detail {
   padding: 12px;
-  // border: solid 2px;
-  // border-color: $color-classy2;
-  // border-radius: 12px;
+  min-width: 350px;
   margin: 4px;
 }
 
